--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-opencv-python==3.4.16.57
-jupyter==1.0.0
-matplotlib==2.1.1
-pandas==0.22.0
 numpy==1.12.1
 pillow==5.0.0
 scipy==1.0.0
+opencv-python>=4.5.5
+jupyter>=1.0.0
+matplotlib>=3.5.0
+pandas>=1.3.0
