--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.12.1
-pillow==5.0.0
-scipy==1.0.0
+numpy>=1.21.2
+pillow>=9.0.0
+scipy>=1.7.0
 opencv-python>=4.5.5
 jupyter>=1.0.0
 matplotlib>=3.5.0
